; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/systat/extr_icmp.c_reseticmp.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/systat/extr_icmp.c_reseticmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CTL_NET = common dso_local global i32 0, align 4
@PF_INET = common dso_local global i32 0, align 4
@IPPROTO_ICMP = common dso_local global i32 0, align 4
@ICMPCTL_STATS = common dso_local global i32 0, align 4
@initstat = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"sysctl getting icmpstat size failed\00", align 1
@oldstat = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @reseticmp() #0 {
  %1 = alloca i64, align 8
  %2 = alloca [4 x i32], align 16
  %3 = load i32, i32* @CTL_NET, align 4
  %4 = getelementptr inbounds [4 x i32], [4 x i32]* %2, i64 0, i64 0
  store i32 %3, i32* %4, align 16
  %5 = load i32, i32* @PF_INET, align 4
  %6 = getelementptr inbounds [4 x i32], [4 x i32]* %2, i64 0, i64 1
  store i32 %5, i32* %6, align 4
  %7 = load i32, i32* @IPPROTO_ICMP, align 4
  %8 = getelementptr inbounds [4 x i32], [4 x i32]* %2, i64 0, i64 2
  store i32 %7, i32* %8, align 8
  %9 = load i32, i32* @ICMPCTL_STATS, align 4
  %10 = getelementptr inbounds [4 x i32], [4 x i32]* %2, i64 0, i64 3
  store i32 %9, i32* %10, align 4
  store i64 4, i64* %1, align 8
  %11 = getelementptr inbounds [4 x i32], [4 x i32]* %2, i64 0, i64 0
  %12 = call i64 @sysctl(i32* %11, i32 4, i32* @initstat, i64* %1, i32 0, i32 0)
  %13 = icmp slt i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %0
  %15 = call i32 @error(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %14, %0
  %17 = load i32, i32* @initstat, align 4
  store i32 %17, i32* @oldstat, align 4
  ret void
}

declare dso_local i64 @sysctl(i32*, i32, i32*, i64*, i32, i32) #1

declare dso_local i32 @error(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
